# squill-drivers

./: .env.sh  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: build.yml  check.yml  ci.yml  coverage.yml
benches/: columns.rs
examples/: rows.rs
squill-async/: Cargo.toml
squill-async/src/: connection.rs  lib.rs  statement.rs  stream.rs  streams.rs
squill-blocking/: Cargo.toml
squill-blocking/src/: connection.rs  lib.rs  rows.rs  statement.rs
squill-core/: Cargo.toml
squill-core/src/: connection.rs  decode.rs  driver.rs  drivers.rs  error.rs  factory.rs  lib.rs  macros.rs  mock.rs  parameters.rs  row.rs  rows.rs  statement.rs  values.rs
squill-core/src/arrow/: array_builder.rs
squill-duckdb/: Cargo.toml  README.md
squill-duckdb/src/: driver.rs  drivers.rs  factory.rs  lib.rs  parameters.rs  statement.rs  values.rs
squill-mysql/: Cargo.toml  README.md
squill-mysql/src/: driver.rs  errors.rs  factory.rs  lib.rs  statement.rs
squill-postgres/: Cargo.toml
squill-postgres/src/: driver.rs  errors.rs  factory.rs  lib.rs  statement.rs  values.rs
squill-serde/: Cargo.toml
squill-serde/src/: lib.rs
squill-sqlite/: Cargo.toml
squill-sqlite/src/: driver.rs  errors.rs  factory.rs  lib.rs  statement.rs  value.rs
src/: lib.rs
