[workspace]
members = [".", "squill-core", "squill-async", "squill-duckdb", "squill-sqlite"]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MIT"
repository = "https://github.com/squill-app/squill-drivers"
keywords = [
    "database",
    "async",
    "postgres",
    "postgresql",
    "sqlite",
    "duckdb",
    "sql",
    "adapter",
    "driver",
]
categories = ["database", "asynchronous"]
edition = "2021"
authors = ["Philippe Shampanier <pshampanier@gmail.com>"]
# include = ["benches/*.rs", "src/**/*.rs", "Cargo.toml"]

[workspace.dependencies]
squill-core = { version = "0.1.0", path = "./squill-core" }
squill-async = { version = "0.1.0", path = "./squill-async" }
squill-duckdb = { version = "0.1.0", path = "./squill-duckdb" }
squill-sqlite = { version = "0.1.0", path = "./squill-sqlite" }
squill-drivers = { version = "0.1.0", path = "./squill-drivers" }
tracing = "0.1.40"
arrow-schema = { version = "52" }
arrow-array = { version = "52", default-features = false, features = [
    "chrono-tz",
] }
tempfile = "3.10.1"
lazy_static = "1.5.0"
ctor = "0.2.8"
url = "2.5.2"
chrono = "0.4.38"
chrono-tz = "0.9.0"
rust_decimal = "1.35.0"
uuid = "1.10"
path-slash = "0.2.1"
mockall = "0.12.1"
regex = "1.10.5"
bytesize = "1.3.0"

[package]
name = "squill-drivers"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
name = "squill_drivers"
path = "src/lib.rs"

[dependencies]
squill-core = { workspace = true }
squill-duckdb = { workspace = true, optional = true }
squill-async = { workspace = true, optional = true }
squill-sqlite = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.5.1"
comfy-table = "7.1.1"
squill-core = { workspace = true, features = ["mock"] }

[features]
default = []
duckdb = ["squill-duckdb"]
async = ["squill-async"]
sqlite = ["squill-sqlite"]

[[example]]
name = "rows"
required-features = ["duckdb"]
path = "./examples/rows.rs"

[[bench]]
name = "columns"
harness = false
