[workspace]
members = [".", "squill-core", "squill-async", "squill-duckdb", "squill-sqlite"]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MIT"
repository = "https://github.com/squill-app/squill-drivers"
keywords = [
    "database",
    "async",
    "postgres",
    "postgresql",
    "sqlite",
    "duckdb",
    "sql",
    "adapter",
    "driver",
]
categories = ["database", "asynchronous"]
edition = "2021"
authors = ["Philippe Shampanier <pshampanier@gmail.com>"]
# include = ["benches/*.rs", "src/**/*.rs", "Cargo.toml"]

[workspace.dependencies]
squill-core = { version = "0.1.0", path = "./squill-core" }
squill-async = { version = "0.1.0", path = "./squill-async" }
squill-duckdb = { version = "0.1.0", path = "./squill-duckdb" }
squill-sqlite = { version = "0.1.0", path = "./squill-sqlite" }
squill-postgres = { version = "0.1.0", path = "./squill-postgres" }
squill-mysql = { version = "0.1.0", path = "./squill-mysql" }
squill-drivers = { version = "0.1.0", path = "./squill-drivers" }
squill-serde = { version = "0.1.0", path = "./squill-serde" }
tracing = "0.1.40"
arrow-schema = { version = "53" }
arrow-array = { version = "53", default-features = false, features = [
    "chrono-tz",
] }
tempfile = "3.10.1"
lazy_static = "1.5.0"
ctor = "0.2.8"
url = "2.5.2"
chrono = "0.4.38"
chrono-tz = "0.9.0"
rust_decimal = "1.35.0"
uuid = "1.10"
path-slash = "0.2.1"
mockall = "0.12.1"
regex = "1.10.5"
bytesize = "1.3.0"
tokio-test = "0.4"

[package]
name = "squill-drivers"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
name = "squill_drivers"
path = "src/lib.rs"

[dependencies]
squill-core = { workspace = true }
squill-duckdb = { workspace = true, optional = true }
squill-async = { workspace = true, optional = true }
squill-sqlite = { workspace = true, optional = true }
squill-postgres = { workspace = true, optional = true }
squill-mysql = { workspace = true, optional = true }
squill-serde = { workspace = true, optional = true}

[dev-dependencies]
criterion = "0.5.1"
comfy-table = "7.1.1"
squill-core = { workspace = true, features = ["mock"] }

[features]
default = []
duckdb = ["squill-duckdb"]
duckdb-bundled = ["squill-duckdb/bundled"]
async = ["squill-async"]
sqlite = ["squill-sqlite"]
postgres = ["squill-postgres"]
mysql = ["squill-mysql"]
serde = ["squill-serde"]

[[example]]
name = "rows"
required-features = ["duckdb"]
path = "./examples/rows.rs"

[[bench]]
name = "columns"
harness = false
