[package]
name = "squill-core"
description = "The core of the squill driver library. This is not intended to be used directly."
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = []

# Enable this feature to use the mock implementation of the driver's traits.
mock = []

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
lazy_static = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
mockall = { workspace = true }
ctor = { workspace = true }
path-slash = { workspace = true }
