[package]
name = "squill-mysql"
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
mysql = { version = "25.0.1", features = ["minimal", "native-tls"] }
squill-core = { workspace = true }
url = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
