[package]
name = "squill-postgres"
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
authors.workspace = true

# bytes is a dependency of postgres needed to implemt the `ToSql` trait
[dependencies]
postgres = { version = "0.19" }
postgres-types = { version = "*" }
postgres-protocol = { version = "*" }
squill-core = { workspace = true }
url = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
bytes = { version = "*" }
byteorder = { version = "*" }
chrono = { version = "*" }
tracing = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
uuid = { workspace = true }
