[package]
name = "squill-sqlite"
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
rusqlite = { version = "0.32", features = ["column_decltype", "series"] }
squill-core = { workspace = true }
url = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
bytesize = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }

[features]
default = []
bundled = ["rusqlite/bundled"]